<resources>
    <string name="app_name">Private Lesson App</string>
    <string name="password">password</string>
    <string name="Email">email</string>
    <string name="user_name">user name</string>
    <string name="choose_studies">choose studies</string>
    <string name="price_per_hour">price per hour</string>
    <string name="phone">phone</string>/>


    <string-array name="TUTORS_SEARCH">
        <item>Show By</item>
        <item>Name</item>
        <item>Class</item>
    </string-array>


    <string-array name='TUTORS_TIMES'>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
</resources>